@@ -1,3 +1,8 @@
+2003-11-16  Per Bothner  <per@bothner.com>
+
+	* Pair.java (readResolve):  New method.
+	* PairWithPosition.java (<init>):  New default constructor.
+
 2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>
 
 	* FString.java (addAll): New method to add an FString directly.
